Refactoring GUI